--- a/src/public/stylesheet/Login.css
+++ b/src/public/stylesheet/Login.css
@@ -20,7 +20,7 @@ body {
 section {
   position: relative;
   background-color: transparent;
-  border: 2px solid rgba(84, 76, 76, 0.5);
+  border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 20px;
   backdrop-filter: blur(70px);
   display: flex;
@@ -31,21 +31,21 @@ section {
 
 h1 {
   font-size: 2rem;
-  color: #565151;
+  color: white;
   text-align: center;
 }
 
 .inputbox {
   position: relative;
   margin: 40px 15px;
-  border-bottom: 2px solid #565151;
-  color: #565151;
+  border-bottom: 2px solid #ffffff;
+  color: white;
 }
 
 /* Khi có dữ liệu hoặc hover, viền đổi màu */
 .inputbox:hover,
 .inputbox:has(input:not(:placeholder-shown)) {
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid rgb(95, 94, 95);
 }
 
 .inputbox label {
@@ -53,17 +53,17 @@ h1 {
   top: 50%;
   left: 5px;
   transform: translateY(-50%);
-  color: #565151;
+  color: white;
   font-size: 1rem;
   pointer-events: none;
   transition: all 0.5s ease-in-out;
 }
 
 /* Khi có dữ liệu hoặc hover, nhãn di chuyển lên */
-.inputbox input:not(:placeholder-shown)~label,
+.inputbox input:not(:placeholder-shown) ~ label,
 .inputbox:hover label {
   top: -5px;
-  color: #333;
+  color: rgb(255, 255, 255);
 }
 
 .inputbox input {
@@ -76,7 +76,7 @@ h1 {
   font-size: 1rem;
   padding: 0 50px 0 5px;
   /* Giữ padding-right để dành chỗ cho icon */
-  color: #565151;
+  color: white;
   margin-bottom: -15px;
   box-sizing: border-box;
   overflow: hidden;
@@ -97,25 +97,25 @@ h1 {
 }
 
 /* Di chuyển nhãn và đổi màu biểu tượng khi autofill */
-.inputbox input:not([type="password"]):-webkit-autofill~label {
+.inputbox input:not([type="password"]):-webkit-autofill ~ label {
   top: -5px;
   color: #333;
 }
 
-.inputbox input:not([type="password"]):-webkit-autofill~ion-icon {
+.inputbox input:not([type="password"]):-webkit-autofill ~ ion-icon {
   color: #333;
 }
 
 .inputbox ion-icon {
   position: absolute;
   right: 8px;
-  color: #565151;
+  color: white;
   font-size: 1.2rem;
   top: 20px;
 }
 
 /* Khi có dữ liệu hoặc hover, biểu tượng đổi màu */
-.inputbox input:not(:placeholder-shown)~ion-icon,
+.inputbox input:not(:placeholder-shown) ~ ion-icon,
 .inputbox:hover ion-icon {
   color: #333;
 }
@@ -135,7 +135,7 @@ h1 {
 .forget {
   margin: 45px 0;
   font-size: 0.85rem;
-  color: #565151;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -169,7 +169,7 @@ h1 {
 }
 
 .forget a {
-  color: #565151;
+  color: white;
   text-decoration: none;
   font-weight: 600;
   font-size: 0.85rem;
@@ -214,10 +214,34 @@ button:hover {
 
 .login p a {
   text-decoration: none;
-  color: #565151;
+  color: white;
   font-weight: 600;
 }
 
 .login p a:hover {
   text-decoration: underline;
+}
+
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.home a ion-icon {
+  font-size: 20px;
+  color: #565151;
+  border: 2px solid white;
+  padding: 7px;
+  border-radius: 20px;
+  background-color: white;
+  transition: 0.3s;
+}
+.home a ion-icon:hover {
+  background-color: #565151;
+  color: white;
+  border: 2px solid #565151;
 }
