--- a/src/views/homepage/Home.ejs
+++ b/src/views/homepage/Home.ejs
@@ -137,6 +137,23 @@
         </div>
         <div class="cartegory-right-top-item">
           <button><span>Bộ lọc</span></button>
+          <div class="sub-filter">
+          <ul>
+            <div class="row">
+              <li><a href="">Thức ăn hạt</a></li>
+              <li><a href="">Pate</a></li>
+              <li><a href="">Ăn vặt</a></li>
+            </div>
+            <div class="row">
+              <li><a href="">Quần áo</a></li>
+              <li><a href="">Vòng cổ</a></li>
+              <li><a href="">Đồ chơi</a></li>
+            </div>
+            <div class="row">
+              <li><a href="">Balo & túi đựng</a></li>
+            </div>
+          </ul>
+        </div>
         </div>
         <div class="cartegory-right-top-item">
           <select name="" id="">
