--- a/src/public/stylesheet/Home.css
+++ b/src/public/stylesheet/Home.css
@@ -36,7 +36,7 @@ body {
     width: 100%;
     background-color: rgb(255, 255, 255);
     z-index: 1;
-    border: 1px solid rgba(0, 0, 0, 0.25);
+    border-bottom: 1px solid rgba(103, 98, 98, 0.3);
     li {
       list-style: none;
       text-decoration: none;
@@ -349,14 +349,41 @@ body {
             padding: 10px 15px;
             display: flex;
             justify-content: space-between;
-            background-color: rgb(247, 251, 254);
+            background-color: rgb(91, 85, 85);
             border: 1px solid black;
             cursor: pointer;
+            color: white;
           }
           button:active {
             background-color: rgb(216, 220, 223);
           }
+          .sub-filter {
+            font-size: 16px;
+
+            position: absolute;
+            border-right: 2px solid rgb(91, 85, 85);
+            border-bottom: 2px solid rgb(91, 85, 85);
+            border-left: 2px solid rgb(91, 85, 85);
+            li {
+              margin-left: 10px;
+              margin-top: 5px;
+              margin-right: 11.7px;
+              margin-bottom: 5px;
+              a {
+                color: rgb(91, 85, 85);
+              }
+              a:hover {
+                text-decoration: underline;
+              }
+            }
+          }
         }
+      }
+      .sub-filter ul {
+        display: none;
+      }
+      .sub-filter.block ul {
+        display: block;
       }
       .cartegory-right-content {
         justify-content: space-between;
