--- a/src/public/stylesheet/Register.css
+++ b/src/public/stylesheet/Register.css
@@ -16,7 +16,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url("https://i.imgur.com/RlCfwMn.jpeg");
+  background-image: url("https://i.imgur.com/Z7pUIfs.png");
   /* https://t4.ftcdn.net/jpg/01/91/60/21/360_F_191602143_B0KQT0rQi8vkxa3hRSSjANAfnhyC3zL4.jpg */
   background-repeat: no-repeat;
   background-position: center;
@@ -44,7 +44,7 @@ section .login {
 section .login a {
   margin-left: 5px;
   text-decoration: none;
-  color: white;
+  color: #565151;
   font-weight: bold;
 }
 
@@ -54,7 +54,7 @@ section .login a:hover {
 
 h1 {
   font-size: 2rem;
-  color: #ffffff;
+  color: #565151;
   text-align: center;
 }
 
@@ -62,12 +62,12 @@ h1 {
   position: relative;
   margin: 30px 15px;
   border-bottom: 2px solid #565151;
-  color: #ffffff;
+  color: #565151;
 }
 
 /* Khi có dữ liệu hoặc hover, viền đổi màu */
 .inputbox:hover,
-.inputbox input:not(:placeholder-shown) ~ .inputbox {
+.inputbox input:not(:placeholder-shown)~.inputbox {
   border-bottom: 2px solid #333;
 }
 
@@ -76,14 +76,14 @@ h1 {
   top: 50%;
   left: 5px;
   transform: translateY(-50%);
-  color: #ffffff;
+  color: #565151;
   font-size: 1rem;
   pointer-events: none;
   transition: all 0.5s ease-in-out;
 }
 
 /* Khi có dữ liệu hoặc hover, nhãn di chuyển lên */
-.inputbox input:not(:placeholder-shown) ~ label,
+.inputbox input:not(:placeholder-shown)~label,
 .inputbox:hover label {
   top: -5px;
   color: #565151;
@@ -98,7 +98,7 @@ h1 {
   outline: none;
   font-size: 1rem;
   padding: 0 35px 0 5px;
-  color: #ffffff;
+  color: #565151;
   margin-bottom: -15px;
 }
 
@@ -116,25 +116,25 @@ h1 {
 }
 
 /* Di chuyển nhãn và đổi màu biểu tượng khi autofill */
-.inputbox input:not([type="password"]):-webkit-autofill ~ label {
+.inputbox input:not([type="password"]):-webkit-autofill~label {
   top: -5px;
   color: #565151;
 }
 
-.inputbox input:not([type="password"]):-webkit-autofill ~ ion-icon {
+.inputbox input:not([type="password"]):-webkit-autofill~ion-icon {
   color: #565151;
 }
 
 .inputbox ion-icon {
   position: absolute;
   right: 8px;
-  color: #ffffff;
+  color: #565151;
   font-size: 1.2rem;
   top: 20px;
 }
 
 /* Khi có dữ liệu hoặc hover, biểu tượng đổi màu */
-.inputbox input:not(:placeholder-shown) ~ ion-icon,
+.inputbox input:not(:placeholder-shown)~ion-icon,
 .inputbox:hover ion-icon {
   color: #565151;
 }
@@ -174,7 +174,7 @@ h1 {
   margin-top: 51.4px;
   margin-left: 15px;
   margin-right: 15px;
-  color: #ffffff;
+  color: #565151;
 }
 
 .selectbox label {
@@ -188,7 +188,7 @@ h1 {
   top: -35%;
   right: 8px;
   font-size: 1.2rem;
-  color: white;
+  color: #565151;
 }
 
 .selectbox select {
@@ -214,12 +214,12 @@ h1 {
 }
 
 /* Di chuyển nhãn và đổi màu biểu tượng khi autofill */
-.selectbox select:-webkit-autofill ~ label {
+.selectbox select:-webkit-autofill~label {
   top: -7px;
   color: #333;
 }
 
-.selectbox select:-webkit-autofill ~ ion-icon {
+.selectbox select:-webkit-autofill~ion-icon {
   color: #333;
 }
 
@@ -242,6 +242,7 @@ button:hover {
   background-color: #565151;
   color: rgb(255, 255, 255);
 }
+
 .selectbox {
   position: relative;
   margin: 30px 15px;
@@ -271,14 +272,14 @@ button:hover {
   outline: none;
   font-size: 1rem;
   padding: 0 35px 0 5px;
-  color: #ffffff;
+  color: #565151;
   appearance: none;
   cursor: pointer;
   box-sizing: border-box;
 }
 
 .selectbox option {
-  background-color: rgb(94, 85, 85);
+  background-color: rgb(248, 245, 245);
 }
 
 /* Đổi màu biểu tượng khi autofill (đã di chuyển lên trên) */
@@ -288,7 +289,7 @@ button:hover {
   top: 50%;
   transform: translateY(-50%);
   font-size: 1.2rem;
-  color: white;
+  color: #565151;
   pointer-events: none;
 }
 
@@ -310,6 +311,7 @@ button:hover {
   background-color: white;
   transition: 0.3s;
 }
+
 .home a ion-icon:hover {
   background-color: #565151;
   color: white;
