--- a/src/views/homepage/Home.ejs
+++ b/src/views/homepage/Home.ejs
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="stylesheet/Home.css">
   <title>Document</title>
 </head>
@@ -50,8 +52,8 @@
       <li><a href="">LIÊN HỆ</a></li>
     </div>
     <div class="others">          
-      <li><a href="/src/views/cart.html" class="shopping-bag"></a><img src="images/icon/bag.png" alt=""></li>
-      <li><a href="http://localhost:8080/register" class="user"><img src="images/icon/user.png" alt=""><p>Đăng nhập/ Đ.kí</p></a></li>
+      <li><a href="http://localhost:8080/cart" class="shopping-bag"><ion-icon name="bag-handle"></ion-icon></a></li>
+      <li><a href="http://localhost:8080/register" class="user"><ion-icon name="person"></ion-icon><p>Đăng nhập/ Đ.kí</p></a></li>
     </div>
   </div>
     <div class="searchs">
